[package]
name = "cli-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
clap = "2.33.3"
solana-clap-utils = "=1.6.6"
solana-cli-config = "=1.6.6"
solana-client = "=1.6.6"
solana-logger = "=1.6.6"
solana-remote-wallet = "=1.6.6"
solana-sdk = "=1.6.6"
tokio = { version = "1", features = ["full"] }
clokwerk = "=0.3.5"
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = "=1.0.126"
byteorder = "1.3"

[dev-dependencies]
solana-validator = "=1.6.6"

[workspace]
